syntax = "proto3";

package article;

option go_package = "./;article";

// gRPC service definition
service ArticleService {
  // processes batch of articles and returns the number processed
  rpc ProcessArticles(ProcessArticlesRequest) returns (ProcessArticlesResponse);

  // extract the top N frequent tags
  rpc GetTopTags(GetTopTagsRequest) returns (GetTopTagsResponse);
}

// --- request & response
message ProcessArticlesRequest {
  repeated Article articles = 1;
}

message ProcessArticlesResponse {
  int32 total_processed = 1; 
}

message GetTopTagsRequest {
  int32 limit = 1; 
}

message GetTopTagsResponse {
  repeated TagFrequency tags = 1;
}

// --- data models
message Article {
  string title = 1;
  string body = 2;
}

message TagFrequency {
  string tag = 1;
  int32 frequency = 2;
}
